# LegisGuardAI

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: admin.py  agent_runs.py  law.py  search.py
app/clients/: llm_client.py  moleg_api.py
app/core/: config.py
app/db/: models.py  session.py
app/db/repositories/: articles.py  laws.py  runs.py
app/schemas/: admin.py  agent_runs.py  search.py
app/services/: change_analyst.py  change_analyst_tools.py  chunking.py  embeddings.py  law_ingest.py  law_parser.py  llm_change_analysis.py  notice_parser.py  notice_search.py  text_normalizer.py  upload_payload.py
app/services/agents/: change_analyst.py  orchestrator.py  run_manager.py  tool_registry.py
data/raw/: detail_276853.xml  detail_277411.xml  search_산업안전보건법 시행규칙.xml  search_산업안전보건법 시행령.xml  search_산업안전보건법.xml
legisguard_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project_guide/: agent_architecture.md  agent_guide.md  introduction.md  user_synario.md
samples/: ingest_request.json  notice_test_cases.json  notice_test_cases_delete_article.json  notice_test_cases_modify_article.json  notice_test_cases_new_article.json  reindex_request.json  search_json_request.json  search_text_request.json
tests/: test_agent_runs_api.py  test_ingest.py  test_law_api.py  test_llm_client.py  test_llm_notice_parser_pdf_images.py  test_notice_diff.py  test_reindex.py  test_search.py  test_search_upload.py
tests/test_cases/: notice_test_cases_delete_article.json  notice_test_cases_modify_article.json  notice_test_cases_new_article.json
ui/: index.html
(+8 files in other folders)
